--- a/accounting/templates/accounting/outlay_edit.html
+++ b/accounting/templates/accounting/outlay_edit.html
@@ -18,6 +18,12 @@
                 <a href="{% url 'accounting:income_list' %}">수입현황</a>
             </div>
             <div class="aside_contents">
+                <a href="{% url 'accounting:income_create' %}">수입작성</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:collect_list' %}">수금현황</a>
+            </div>
+            <div class="aside_contents">
                 <a href="{% url 'accounting:outlay_list' %}">지출현황</a>
             </div>
             <div class="aside_contents">
