--- a/accounting/templates/accounting/salary_detail.html
+++ b/accounting/templates/accounting/salary_detail.html
@@ -17,12 +17,18 @@
                 <a href="{% url 'accounting:income_list' %}">수입현황</a>
             </div>
             <div class="aside_contents">
+                <a href="{% url 'accounting:income_create' %}">수입작성</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'accounting:collect_list' %}">수금현황</a>
+            </div>
+            <div class="aside_contents">
                 <a href="{% url 'accounting:outlay_list' %}">지출현황</a>
             </div>
             <div class="aside_contents">
                 <a href="{% url 'accounting:outlay_create' %}">지출작성</a>
             </div>
-            <div class="aside_contents">
+            <div class="aside_contents aside_contents_thispage">
                 <a href="{% url 'accounting:salary_list' %}">급여현황</a>
             </div>
             <div class="aside_contents">
