--- a/static/css/notice/notice_kinds.css
+++ b/static/css/notice/notice_kinds.css
@@ -28,6 +28,7 @@ a{
   border: 0.1rem solid #B41515;
   border-radius: 0.5rem;
   font-display: #B41515;
+  font-size: 1.5rem;
 }
 
 .top_box_search_button{
