--- a/notice/templates/notice/kinds.html
+++ b/notice/templates/notice/kinds.html
@@ -80,7 +80,7 @@
                 <div class="pagination">
                     {% if page_obj.has_previous %}
                     <div class="page-item page-pre">
-                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}"
+                        <a class="page-link" href="?top_box_selector={{selector}}&search={{searched}}&page={{ page_obj.previous_page_number }}"
                             tabindex="-1">이전</a>
                     </div>
                     {% else %}
@@ -90,14 +90,14 @@
                     {% endif %}
                     {% for page in page_range %}
                         <div class="page-item {% if page == page_obj.number %} page-activate {% endif %}">
-                            <a class="page-link" href="?page={{ page }}">{{ page }}</a>
+                            <a class="page-link" href="?top_box_selector={{selector}}&search={{searched}}&page={{ page }}">{{ page }}</a>
                         </div>      
                     {% endfor %}
 
                     {% if page_obj.has_next %}
                     <div class="page-item">
                         <a class="page-link page-next"
-                            href="?page={{ page_obj.next_page_number }}">다음</a>
+                            href="?top_box_selector={{selector}}&search={{searched}}&page={{ page_obj.next_page_number }}">다음</a>
                     </div>
                     {% else %}
                     <div class="page-item page-next disabled">
