--- a/humanresource/templates/HR/member_create.html
+++ b/humanresource/templates/HR/member_create.html
@@ -1,22 +1,101 @@
-member_create
-
-<form method="POST" action="">
-    {% csrf_token %}
-    {{ member_form }}
-    <input type="submit" value="등록">
-</form>
+{% extends 'base.html' %}
+{% load static %}
 
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+{% block head %}
+    <link href="{% static 'css/hr/member.css' %}" rel="stylesheet" type="text/css">
+{% endblock %}
 
+{% block content %}
 
-<script>
-    // This code activates flatpickr on fields with the 'datetimefield' class when the document has loaded
-    window.addEventListener("DOMContentLoaded", function () {
-        flatpickr(".datetimefield", {
-            enableTime: true,
-            dateFormat: "Y-m-d",
-        });
-    });
-</script>
+<div class="main_box outlay_detaillist__main_box">
+    <aside>
+        <div class="aside_box">
+            <div class="aside_title">
+                <div class="aside_title_font">인사</div>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'HR:member' %}">직원관리</a>
+            </div>
+            <div class="aside_contents aside_contents_thispage">
+                <a href="{% url 'HR:member_create' %}">직원등록</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'HR:management' %}">인사관리</a>
+            </div>
+            <div class="aside_contents">
+                <a href="{% url 'HR:HR_create' %}">인사등록</a>
+            </div>
+        </div>
+    </aside>
+
+    <section class="main_section">
+        <div class="top_box">
+            <div class="top_box_title">직원 등록</div>
+        </div>
+        <div class="member_create__mid_box">
+            <form method="POST" action="">
+                {% csrf_token %}
+                <div class="member_create__mid_box__border">
+                    <div class="member_create__mid_box__content_box">
+                        <div class="member_create__mid_box__content_box_content_box_first">
+                            <div class="member_create__mid_box__content_box__content_header">이름</div>
+                            <input type="text" name="name" class="member_create__mid_box__content_box__content">
+                        </div>
+                        <div class="member_create__mid_box__content_box_content_box">
+                            <div class="member_create__mid_box__content_box__content_header">주민번호</div>
+                            <input type="number" name="person_id1" class="member_create__mid_box__content_box__content input_person_id" oninput='handleOnInput(this, 6)'>
+                            <input type="number" name="person_id2" class="member_create__mid_box__content_box__content input_person_id" oninput='handleOnInput(this, 7)'>
+                        </div>
+                    </div>
+                    <div class="member_create__mid_box__content_box">
+                        <div class="member_create__mid_box__content_box_content_box_first">
+                            <div class="member_create__mid_box__content_box__content_header">업무</div>
+                            <input type="text" name="role" class="member_create__mid_box__content_box__content">
+                        </div>
+                        <div class="member_create__mid_box__content_box_content_box">
+                            <div class="member_create__mid_box__content_box__content_header">전화번호</div>
+                            <input type="number" name="phone_num" class="member_create__mid_box__content_box__content" oninput='handleOnInput(this, 11)'>
+                        </div>
+                    </div>
+                    <div class="member_create__mid_box__content_box">
+                        <div class="member_create__mid_box__content_box_content_box_address">
+                            <div class="member_create__mid_box__content_box__content_header">주소</div>
+                            <input type="text" name="address" class="member_create__mid_box__content_box__content_address">
+                        </div>
+                    </div>
+                    <div class="member_create__mid_box__content_box">
+                        <div class="member_create__mid_box__content_box_content_box_first">
+                            <div class="member_create__mid_box__content_box__content_header">권한</div>
+                            <input type="text" name="authority" class="member_create__mid_box__content_box__content">
+                        </div>
+                        <div class="member_create__mid_box__content_box_content_box">
+                            <div class="member_create__mid_box__content_box__content_header">입사일</div>
+                            <input type="date" name="entering_date" class="member_create__mid_box__content_box__content input_date">
+                        </div>
+                    </div>
+                    <div class="member_create__mid_box__content_box">
+                        <div class="member_create__mid_box__content_box_content_box_first">
+                            <div class="member_create__mid_box__content_box__content_header">면허번호</div>
+                            <input type="text" name="license_num" class="member_create__mid_box__content_box__content">
+                        </div>
+                        <div class="member_create__mid_box__content_box_content_box">
+                            <div class="member_create__mid_box__content_box__content_header">운행판정표</div>
+                            <input type="text" name="check" class="member_create__mid_box__content_box__content input_date">
+                        </div>
+                    </div>
+                    <input type="submit" class="member_create_submit" value="등록">
+                </div>
+            </form>
+        </div>
+        <div class="blank"></div>
+    </section>
+
+    <script>
+        function handleOnInput(el, maxlength) {
+            if(el.value.length > maxlength)  {
+                el.value = el.value.substr(0, maxlength);
+            }
+        }
+    </script>
+{% endblock %}
